# uncompress

./: .clippy.toml  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md  rustfmt.toml  specs.md  test_getrandom.py
.github/workflows/: ci.yml
.jules/: bolt.md  sentinel.md
.qwen/: PROJECT_SUMMARY.md
examples/: generate_fixtures.rs  generate_tiff_compression_types.rs  process_file.rs
src/: main.rs
tests/: cli_tests.rs
tests/fixtures/: test.data  test.tif_data  test_gray.tiff
tests/fixtures/tiff_compression/: base_uncompressed.tif  test_16bit_lzw.tif  test_deflate.tif  test_jpeg.tif  test_lerc.tif  test_lerc_deflate.tif  test_lerc_zstd.tif  test_lzw.tif  test_packbits.tif  test_rgba_lzw.tif  test_webp.tif  test_zstd.tif
