[package]
name = "uncompress"
version = "0.1.0"
edition = "2021"
description = "Decompress files (zip, gz, png, tiff/geotiff) for better git storage over time of mutable files"
authors = ["Gautier <gautier@soundconverter.org>"]
repository = "https://github.com/kassoulet/uncompress"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["compression", "git", "zip", "png", "tiff", "geotiff", "optimization"]
categories = ["compression", "command-line-utilities"]
rust-version = "1.82"

[features]
default = ["tiff-support"]
tiff-support = ["dep:tiff"]
tiff-minimal = ["dep:tiff"]

[dependencies]
clap = { version = "4", features = ["derive"] }
flate2 = "1.0"
png = "0.18"
zip = { version = "1.1", default-features = false, features = ["deflate"] }
walkdir = "2"
tiff = { version = "0.9", optional = true }
tempfile = "3"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"

[profile.release]
lto = true
strip = true
codegen-units = 1
